creating class products and router
